<resources>
    <string name="app_name">EasyShopping GMD</string>
    <string name="nameCategorias">Categorias</string>
    <string name="descbtncategoria">ver</string>
    <string name="nomCategoriaDefault">CATEGORIA</string>
    <string name="cantCantSubcategorias">Cantidad de SubCategorias</string>
    <string name="cantProductos">Cantidad de productos</string>
    <string name="create_account">Crear cuenta</string>
    <string name="user_name">Usuario</string>
    <string name="password_text">Contraseña</string>
    <string name="full_name">Nombre</string>
    <string name="email">Correo</string>
    <string name="registrarme">Registrar</string>
    <string name="nameProduct">Nombre</string>
    <string name="nomProductoDefault">PRODUCTO</string>
    <string name="precioProducto">Precio</string>
    <string name="DescProductoDefault">Producto en venta solo por este año. Preguntar por GMD</string>
    <string name="nomtitDescProdudct">Descripción del Producto:</string>
    <string name="descCamposInvalidos">Campos inválidos...</string>
    <string name="alertIngresarNombre">Debe ingresar un nombre</string>
    <string name="alertIngresarContrasenia">Debe ingresar un password</string>
    <string name="seleccionarCantidad">Cantidad</string>
    <string name="comprar">Comprar</string>
    <string name="msgIngresoUsuarioExitoso">Ingreso de usuario exitoso</string>
    <string name="msgIngresoUsuarioErrone">Ingreso de datos incorrecto</string>
    <string name="msgUsuarioInvalido">Usuario inválido</string>
    <string name="msgPasswordInvalido">Contraseña inválido</string>
    <string name="msgNombreInvalido">Nombre inválido</string>
    <string name="msgEmailInvalido">Correo inválido</string>
    <string name="msgEmailFormatoInvalido">Correo no tiene el formato correcto</string>
    <string name="navigation_drawer_close">Cerrar el cajón de navegación</string>
    <string name="contenido">CARACTERISTICAS DEL PRODUCTO: Fabricado bajo estandares de calidad, base de pino blanco, acabado de lujo, un brillo espectacular, mastil Reforzado con Alma o valrilla de calibracion alta duracion, clavijeros reforzados, cuerdas de metal o naylon (a gusto del cliente), excelente Sonido (tipo estudio).Hacemos entregas a domicilio en Lima. Envios a Provincia atraves de empresas de encomiendas. El precio no incluye  el costo de envio. Ud recibirá la Guitarra con el  set de  regalos que  le  detallamos a continuación: Guitarra Acustica Importada (Ud. elige el color), estuche de Obsequio, 2 Picks o Uñas.</string>
    <string name="log_hint_password">Contraseña</string>
    <string name="log_nom_guardar_usuario">Guardar Usuario</string>
    <string name="log_btn_log_in">" Iniciar sesión"</string>
    <string name="log_tvi_registrar">¿No tiene una cuenta? Regístrate</string>
    <string name="hint_username">Usuario</string>
    <string name="logoaplication">Logo de Aplicación</string>
    <string name="navigation_drawer_open">Abrir el cajón de navegación</string>
</resources>
