<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/AzaleaOriginal"
    tools:context="pe.com.gmd.appeasyshopping.NewAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:id="@+id/llayHeader">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/create_account"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_below="@+id/llayHeader">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/user_name"
            android:id="@+id/txtUserName"
         />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/password_text"
            android:inputType="textPassword"
            android:id="@+id/txtPassword"
           />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/full_name"
            android:id="@+id/txtFullName"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:id="@+id/txtEmail"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/registrarme"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:textAllCaps="false"
            android:id="@+id/btnRegistro"
            android:background="@drawable/ripple_drawable"
            android:elevation="15dp"
            android:textColor="@color/white60"

            />

    </LinearLayout>

</RelativeLayout>
