<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:id="@+id/CviCategoria"
    app:cardElevation="8dp"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
   >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:id="@+id/imgCategoria"
            android:src="@drawable/accesorios"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/imgCategoria"
            android:id="@+id/txtNomCateria"
            android:text="@string/nomCategoriaDefault"
            android:padding="10dp"
            android:textSize="18sp"
            android:textColor="@color/cardview_dark_background"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_below="@+id/txtNomCateria"
            android:layout_toRightOf="@id/imgCategoria"
            android:text="@string/cantCantSubcategorias"
            android:paddingLeft="12dp"
            android:paddingTop="5dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvicantSubCategorias"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cantProductos"
            android:layout_below="@id/tvicantSubCategorias"
            android:layout_toRightOf="@+id/imgCategoria"
            android:paddingTop="5dp"
            android:paddingLeft="12dp"
            android:id="@+id/tvicantProductos"/>
       
    </RelativeLayout>

</android.support.v7.widget.CardView>